--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Push to Hugging Face Hub
         uses: huggingface/hub-actions@v1
         with:
-          repo-token: ${{ secrets.HF_TOKEN }}
+          repo-token: ${{ secrets.TEAMCAREERPROGRESSIONAPPTOKEN }}
           repo-id: Priyanka-Ankam/Team-Career-Progression-App   # <-- change to your Space ID
