--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit==1.39.0
-pandas
-altair
-plotly
-numpy
+pandas==2.2.2
+numpy==1.26.4
+plotly==5.24.1
+altair==5.2.0
+python-dateutil==2.9.0.post0
+pyarrow==17.0.0
