--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -1,27 +1,31 @@
-
----
-
-## 6️⃣ Optional: GitHub Actions – `.github/workflows/deploy-to-hf.yml`
-
-Use this only if you want **CI/CD from GitHub to an existing Space**.  
-(You’ll need a secret `HF_TOKEN` with write access to your HF account.)
-
-```yaml
 name: Deploy to Hugging Face Space
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Push to Hugging Face Hub
-        uses: huggingface/hub-actions@v1
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          repo-token: ${{ secrets.TEAMCAREERPROGRESSIONAPPTOKEN }}
-          repo-id: Priyanka-Ankam/Team-Progression-App   # <-- change to your Space ID
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          pip install huggingface_hub
+
+      - name: Push to Hugging Face Space
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          huggingface-cli repo update \
+            --token $HF_TOKEN \
+            --repo-id Priyanka-Ankam/Team-Progression-App \
+            --folder .
+
