--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -25,7 +25,7 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           huggingface-cli repo update \
-            --token $HF_TOKEN \
+            --token $TeamCareerProgressionAppTOKEN \
             --repo-id Priyanka-Ankam/Team-Progression-App \
             --folder .
 
