--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Push to Hugging Face Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
         run: |
           huggingface-cli repo update \
             --token $TeamCareerProgressionAppTOKEN \
