--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -7,25 +7,22 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+      - name: Install HuggingFace Hub
+        run: pip install huggingface_hub
 
-      - name: Install dependencies
-        run: |
-          pip install huggingface_hub
-
-      - name: Push to Hugging Face Space
+      - name: Upload to Hugging Face Space
         env:
           HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
         run: |
-          huggingface-cli repo update \
-            --token $TeamCareerProgressionAppTOKEN \
+          huggingface-cli upload \
             --repo-id Priyanka-Ankam/Team-Progression-App \
-            --folder .
+            --token $HF_TOKEN \
+            . \
+            --commit-message "Auto deployment from GitHub"
+
 
