--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -12,17 +12,18 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Install HuggingFace Hub
+      - name: Install HuggingFace Hub CLI
         run: pip install huggingface_hub
 
       - name: Upload to Hugging Face Space
         env:
           HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
         run: |
-          huggingface-cli upload \
+          hf upload \
             --repo-id Priyanka-Ankam/Team-Progression-App \
             --token $HF_TOKEN \
             . \
             --commit-message "Auto deployment from GitHub"
+
 
 
