--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Install HuggingFace Hub CLI
+      - name: Install HF CLI
         run: pip install huggingface_hub
 
       - name: Upload to Hugging Face Space
@@ -20,10 +20,11 @@ jobs:
           HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
         run: |
           hf upload \
-            --repo-id Priyanka-Ankam/Team-Progression-App \
-            --token $HF_TOKEN \
+            Priyanka-Ankam/Team-Progression-App \
             . \
-            --commit-message "Auto deployment from GitHub"
+            --token $HF_TOKEN \
+            --commit-message "Auto deploy"
+
 
 
 
