--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Upload to Hugging Face
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
         run: |
           hf upload \
             Priyanka-Ankam/Team-Progression-App \
