--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -1,26 +1,34 @@
-name: Deploy Docker App to Hugging Face Space
+name: Deploy to Hugging Face
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+      - name: Checkout GitHub repo
+        uses: actions/checkout@v4
 
-      - name: Install HF CLI
-        run: pip install huggingface_hub
-
-      - name: Upload to Hugging Face
-        env:
-          HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
+      - name: Configure Git
         run: |
-          hf upload \
-            Priyanka-Ankam/Team-Progression-App \
-            . \
-            --token $HF_TOKEN \
-            --commit-message "Deploy updated Dockerfile"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+      - name: Clone Hugging Face Space
+        run: |
+          git clone https://__token__:${{ secrets.TeamCareerProgressionAppTOKEN }}@huggingface.co/${{ secrets.HF_SPACE }} hf_repo
+
+      - name: Copy project files (excluding hf_repo)
+        run: |
+          shopt -s extglob
+          cp -r !(hf_repo) hf_repo/
+
+      - name: Commit and push to Hugging Face
+        run: |
+          cd hf_repo
+          git add .
+          git commit -m "Auto deploy from GitHub" || echo "No changes to commit"
+          git push
