--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,33 @@
-name: Deploy to Hugging Face Space
+name: Deploy to Hugging Face
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+      - name: Checkout GitHub repo
+        uses: actions/checkout@v4
 
-      - name: Install HuggingFace Hub CLI
-        run: pip install huggingface_hub
-
-      - name: Upload to Hugging Face Space
-        env:
-          HF_TOKEN: ${{ secrets.TeamCareerProgressionAppTOKEN }}
+      - name: Configure Git
         run: |
-          hf upload \
-            Priyanka-Ankam/Team-Progression-App \
-            . \
-            --token $HF_TOKEN \
-            --commit-message "Auto deploy to HF from GitHub"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+      - name: Clone Hugging Face Space
+        run: |
+          git clone https://__token__:${{ secrets.TeamCareerProgressionAppTOKEN }}@huggingface.co/${{ secrets.HF_SPACE }} hf_repo
+
+      - name: Copy project files safely
+        run: |
+          rsync -av --exclude='hf_repo' --exclude='.git' --exclude='.github' ./ hf_repo/
+
+      - name: Commit and push to Hugging Face
+        run: |
+          cd hf_repo
+          git add .
+          git commit -m "Auto deploy from GitHub" || echo "No changes to commit"
+          git push
