--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 streamlit==1.39.0
 pandas==2.2.2
-numpy==1.26.4
 plotly==5.24.1
-altair==5.2.0
-python-dateutil==2.9.0.post0
-pyarrow==17.0.0
+huggingface_hub==0.23.0
