--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,18 +9,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout GitHub repository
+      - name: Checkout GitHub repo
         uses: actions/checkout@v4
 
-      - name: Install Hugging Face CLI
-        run: pip install huggingface_hub
-
-      - name: Upload project to HuggingFace Space
-        env:
-          HF_TOKEN: ${{ secrets.TEAMCAREERPROGRESSIONAPPTOKEN }}
+      - name: Configure Git
         run: |
-          hf upload \
-            Priyanka-Ankam/Team-Progression-App \
-            . \
-            --token $HF_TOKEN \
-            --commit-message "GitHub → HF Auto Deploy"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+      - name: Clone Hugging Face Space repo
+        run: |
+          git clone https://__token__:${{ secrets.TEAMCAREERPROGRESSIONAPPTOKEN }}@huggingface.co/${{ secrets.HF_SPACE }} hf_repo
+
+      - name: Sync project files to Space (overwrite)
+        run: |
+          rsync -av --exclude='hf_repo' --exclude='.git' --exclude='.github' ./ hf_repo/
+
+      - name: Commit & Push
+        run: |
+          cd hf_repo
+          git add .
+          git commit -m "Auto deploy from GitHub" || echo "No changes"
+          git push
