--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.39.0
-pandas==2.2.2
-plotly==5.24.1
-huggingface_hub==0.23.0
+streamlit==1.40.0
+pandas
+numpy
+plotly
+python-dateutil
+altair
+huggingface_hub
