--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-      - name: Clone Hugging Face Space repo
+      - name: Clone HF Space repo
         run: |
           git clone https://__token__:${{ secrets.TEAMCAREERPROGRESSIONAPPTOKEN }}@huggingface.co/${{ secrets.HF_SPACE }} hf_repo
 
